Fix header spacing on blog

--- a/app/globals.css
+++ b/app/globals.css
@@ -336,11 +336,11 @@ body {
     }
 
     h3 {
-      @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+      @apply scroll-m-20 text-2xl font-semibold tracking-tight first:mt-0 mt-4;
     }
 
     h4 {
-      @apply scroll-m-20 text-xl font-semibold tracking-tight;
+      @apply scroll-m-20 text-xl font-semibold tracking-tight first:mt-0 mt-2;
     }
 
     p {
@@ -418,6 +418,7 @@ body {
 
     hr {
       @apply bg-border shrink-0 h-px w-full;
+      /*@apply hidden;*/
     }
 
     /*a {
